Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musky-huskle-deployment
  namespace: default
  labels:
    app: musky-huskle
spec:
    replicas: 1
    selector:
      matchLabels:
        app: musky-huskle
    template:
      metadata:
          labels:
            app: musky-huskle
      spec:
        containers:
          - name: musky-huskle-db
            image: mysql:latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 3306
            resources:
              requests:
                memory: "1Gi"
                cpu: "500m"
              limits:
                memory: "2Gi"
                cpu: "4"
            volumeMounts:
              - name: musky-huskle-storage
                mountPath: /var/lib/mysql

          - name: musky-huskle-server
            image: musky-huskle_backend
            imagePullPolicy: Never
            ports:
              - containerPort: 9621
            resources:
              requests:
                memory: "1Gi"
                cpu: "500m"
              limits:
                memory: "2Gi"
                cpu: "4"

          - name: musky-huskle-proxy
            image: envoyproxy/envoy:v1.30-latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 8080
            resources:
              requests:
                memory: "1Gi"
                cpu: "500m"
              limits:
                memory: "2Gi"
                cpu: "4"

          - name: musky-huskle-interface
            image: musky-huskle_frontend
            imagePullPolicy: Never 
            ports:
              - containerPort: 5173
            resources:
              requests:
                memory: "1Gi"
                cpu: "500m"
              limits:
                memory: "2Gi"
                cpu: "4"
        volumes:
        - name: musky-huskle-storage
          persistentVolumeClaim:
            claimName: musky-huskle-pv-claim
