Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musky-huskle
  labels:
    run: musky-huskle
spec:
  ports:
    - port: 8000
      targetPort: 5173
      protocol: TCP
  selector:
    app: musky-huskle
