Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: muskyhuskle.k8s.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: musky-huskle-frontend
              port:
                number: 80
